Some zippies on installation page

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ description: turn your editor into a C++ IDE
 plugins:
 - jekyll-optional-front-matter
 - jekyll-default-layout
+markdown: kramdown
+kramdown:
+  parse_block_html: true
