Basic feature list. Screenshots to come

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 - title: Getting Started
   url: /installation.html
   icon: '⚙️'
+- title: Features
+  url: /features.html
+  icon: '✓'
 - separator
 - title: Protocol extensions
   url: /extensions.html
