Add page title.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: turn your editor into a C++ IDE
 plugins:
 - jekyll-optional-front-matter
 - jekyll-default-layout
+- jekyll-titles-from-headings
 markdown: kramdown
 kramdown:
   parse_block_html: true
