Add troubleshooting section (#10)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,9 @@
 - title: Features
   url: /features.html
   icon: '✓'
+- title: Troubleshooting
+  url: /troubleshooting.html
+  icon: '💥'
 - separator
 - title: Design
   url: /design/
