Update remote index documentation
* Add production server address
* Remove mentions of the service being experimental
* Add Remote Index pages to the navbar for better visibility and feature
  discovery (it's almost impossible to find otherwise)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,13 @@
   url: /extensions.html
   icon: '⊕'
 - separator
+- title: Remote Index
+  url: /remote-index.html
+  icon: '💻'
+- title: LLVM Remote Index service
+  url: /llvm-remote-index.html
+  icon: '🐲'
+- separator
 - title: Browse code
   url: https://github.com/llvm/llvm-project/tree/main/clang-tools-extra/clangd
   icon: '📄'
