Move remote index docs under design
Also set up redirections so we don't break existing links

(TODO: split out user-facing part into guides, and inline the LLVM
remote index page)

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ plugins:
 - jekyll-optional-front-matter
 - jekyll-default-layout
 - jekyll-titles-from-headings
+- jekyll-redirect-from
 markdown: kramdown
 kramdown:
   parse_block_html: true
