Update remote index docs
- Split into design/guide, most of guide content is new
- Merge llvm remote index into main guide docs, remove bits that overlap
  with the new web ui (e.g. privacy)
- strip stale bits about stable releases not having grpc

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,15 @@
 - title: Troubleshooting
   url: /troubleshooting
   icon: '💥'
+- title: Guides
+  url: /guides/
+  icon: '📖'
+  children:
+    - title: Using a remote index
+      description: >
+        If your project has a clangd index server, then you can connect to it
+        to avoid slow local indexing of a large codebase.
+      url: /guides/remote-index
 - separator
 - title: Design
   url: /design/
