Add FAQ entrypoint, fix README header
As mentioned in https://github.com/llvm/clangd-www/pull/41 follow-up,
I didn't previously add entrypoint to the newly added FAQ.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,9 @@
         Details about how system header detection in clangd works and how to fix
         issues with missing system headers.
       url: /guides/system-headers
+- title: FAQ
+  url: /faq
+  icon: '❓'
 - separator
 - title: Design
   url: /design/
