Move Include Cleaner docs to Design

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,10 +24,6 @@
         Details about how system header detection in clangd works and how to fix
         issues with missing system headers.
       url: /guides/system-headers
-    - title: Include Cleaner
-      description: >
-        Remove unused includes and reduce build times by using Include Cleaner.
-      url: /guides/include-cleaner
 - title: FAQ
   url: /faq
   icon: '❓'
@@ -46,6 +42,10 @@
       url: /design/indexing
     - title: Remote index
       url: /design/remote-index
+    - title: Include Cleaner
+      description: >
+        Remove unused includes and reduce build times by using Include Cleaner.
+      url: /design/include-cleaner
 - title: Protocol extensions
   url: /extensions
   icon: '⊕'
