Introduce IncludeCleaner documentation (#61)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -42,6 +42,8 @@
       url: /design/indexing
     - title: Remote index
       url: /design/remote-index
+    - title: Include Cleaner
+      url: /design/include-cleaner
 - title: Protocol extensions
   url: /extensions
   icon: '⊕'
