Fix URI to include-cleaner guide

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@
       description: >
         Identify unused #includes which slow down your build, and understand how
         clangd decides which headers are used.
-      url: /guides/unused-includes
+      url: /guides/include-cleaner
 - title: FAQ
   url: /faq
   icon: '❓'
